2004-01-16  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c (ves_icall_System_Reflection_Assembly_InternalGetType): 
	Search modules loaded using AssemblyBuilder:AddModule as well.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* appdomain.c: increased corlib version.
	* filewatcher.c: removed g_print.
	* icall.c:
	(get_property_info): only allocate what is actually requested.
	(ves_icall_Type_GetInterfaces): free the bitset in case of early error.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile.am: added filewatcher.[ch]
	* filewatcher.[ch]: FileSystemWatcher runtime support.
	* icall.c: added new FSW icalls.

Tue Jan 13 20:03:17 CET 2004 Paolo Molaro <lupus@ximian.com>

	* string-icalls.c: fix stringbuilder regression as suggested by
	Iain McCoy <iain@mccoy.id.au>.

2004-01-13  Zoltan Varga  <vargaz@freemail.hu>

	* process.c (process_read_stringtable_block): Recognize '007f' as
	a language neutral stringtable block.

2004-01-12  Patrik Torstensson

	* object.h (MonoStringBuilder) : Changed layout to support our
	new stringbuilder class.
	* marshal.c: Change marshalling to support the new layout of 
	string builder.
	* appdomain.c: increased version number because new layout of
	string builder.

2004-01-12  Zoltan Varga  <vargaz@freemail.hu>

	* appdomain.c (ves_icall_System_AppDomain_LoadAssembly): Receive the
	assembly name as an string instead of an AssemblyName, since it is
	easier to extract info from it.

	* appdomain.c (mono_domain_assembly_preload): Look for assemblies in
	the culture subdirectories too. Fixes #52231.

2004-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: renamed ves_icall_Type_GetMethods to GetMethodsByName.
	It takes 2 new parameters with an optional name for the method to look
	for and case ignoring info.

	* threadpool.c: removed unused variable.

2004-01-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: renamed ves_icall_Type_GetProperties to GetPropertiesByName.